platform/projects/llunde-pyparser/tunnel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: llunde-pyparser
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
      app.kubernetes.io/part-of: llunde-pyparser
      app.kubernetes.io/component: tunnel
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloudflared
        app.kubernetes.io/part-of: llunde-pyparser
        app.kubernetes.io/component: tunnel
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: fredrir-09
        kubernetes.io/arch: amd64
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: ghcr
      containers:
      - name: cloudflared
        image: docker.io/cloudflare/cloudflared@sha256:b392761b711c0e5649d9b64e1fc9a10ba0563fa3e712ed7c26bde5cc1fbe9059
        imagePullPolicy: IfNotPresent
        args:
        - tunnel
        - --no-autoupdate
        - --protocol
        - http2
        - run
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
          runAsUser: 65532
          runAsGroup: 65532
          runAsNonRoot: true
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 256Mi
