platform/projects/llunde-pyparser/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: llunde-pyparser
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: llunde-pyparser
    app.kubernetes.io/component: database
  ports:
  - name: postgres
    port: 5432
    targetPort: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: llunde-pyparser
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
      app.kubernetes.io/part-of: llunde-pyparser
      app.kubernetes.io/component: database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
        app.kubernetes.io/part-of: llunde-pyparser
        app.kubernetes.io/component: database
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: fredrir-09
        kubernetes.io/arch: amd64
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
      - name: ghcr
      containers:
      - name: postgres
        image: docker.io/library/postgres@sha256:af194ccf3e2d7fe367012c7b88ce8b816c5c889b18a5b316799a1f0d7eac746a
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
          runAsUser: 70
          runAsGroup: 70
          runAsNonRoot: true
        ports:
        - name: postgres
          containerPort: 5432
        resources:
          requests:
            cpu: 100m
            memory: 192Mi
          limits:
            cpu: '2'
            memory: 1Gi
        volumeMounts:
        - name: database
          mountPath: /var/lib/postgresql/data
        - name: shm
          mountPath: /dev/shm
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - pyparser
            - -d
            - pyparser_llunde
          periodSeconds: 5
          timeoutSeconds: 5
        startupProbe:
          exec:
            command:
            - pg_isready
            - -U
            - pyparser
            - -d
            - pyparser_llunde
          periodSeconds: 5
          failureThreshold: 30
          timeoutSeconds: 5
      securityContext:
        fsGroup: 70
        fsGroupChangePolicy: OnRootMismatch
      volumes:
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: 256Mi
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
  - metadata:
      name: database
    spec:
      storageClassName: local-retain
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 20Gi
